fixed the size and alignment of the words

--- a/cssgymshirts/gymcss.css
+++ b/cssgymshirts/gymcss.css
@@ -12,7 +12,10 @@ Header p{
 	padding-right: 100px;
 	position: sticky;
 	top:0;
-	font-size: 20px;
+	font-size: 50px;
+}
+p1{
+	text-align: center;
 }
 
 middle{
